<resources>
    <string name="app_name">WikiPayam</string>


    <!-- Login Fragment -->
    <string name="enter_app">ورود به برنامه</string>
    <string name="username">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="submit">ثبت</string>
    <string name="signup_in_site">عضویت در سایت</string>
    <string name="forgot_password">فراموش کردن رمز عبور</string>
    <string name="note_login_success">با موفقیت وارد شدید</string>
    <string name="warn_empty_user_pass">نام کاربری و رمز عبور نمی تواند خالی باشد</string>
    <string name="error_incorrect_user_pass">نام کاربری یا رمز عبور نادرست است!</string>


    <!-- Signup Fragment -->
    <string name="password_repeat">تکرار رمز عبور</string>
    <string name="email">ایمیل</string>
    <string name="name">نام و نام خانوادگی</string>
    <string name="mobile">موبایل</string>
    <string name="signup">ثبت نام</string>
    <string name="agree_to_rules">با قوانین سایت موافقم</string>


    <!-- Forgot Password Fragment -->
    <string name="submit_forgot_password">ثبت درخواست بازیابی رمز عبور</string>

    <!-- Code Entry Fragment -->
    <string name="exp_code_entry">کد تایید دریافت شده از طریق ایمیل یا موبایل را وارد کنید</string>
    <string name="submit_confirm_code">ثبت کد تایید</string>
    <string name="confirm_code">کد تایید</string>


    <!-- Dashboard Fragment -->
    <string name="inventory">موجودی:</string>
    <string name="rial">ریال</string>
    <string name="user_menu">منوی کاربری</string>
    <string name="send_message">ارسال پیام</string>
    <string name="finance">امور مالی</string>
    <string name="receive_message">دریافت پیام</string>
    <string name="contacts">دفترچه تلفن</string>
    <string name="monthly_stats">آمار ماهیانه</string>
    <string name="exit">خروج</string>


    <!-- Send Single Message Fragment -->
    <string name="send_single_message">ارسال پیامک تکی</string>
    <string name="message_send_price">قیمت ارسال پیامک</string>
    <string name="sender_number">شماره ارسال کننده</string>
    <string name="receiver">دریافت کننده</string>
    <string name="message_text">متن پیامک</string>
    <string name="attention.">توجه:</string>
    <string name="attention_explain">قرار دادن \"لغو۱۱\" در کلیه ی پیامها \"ضروری\" است.</string>
    <string name="remaining_chars.">تعداد کاراکتر باقی مانده: %d (%d پیامک) (%d کاراکتر)</string>
    <string name="use_patterns">استفاده از الگوها</string>
    <string name="message">پیامک</string>
    <string name="character">کاراکتر</string>
    <string name="future_send">ارسال در آینده</string>
    <string name="flash_send">ارسال بصورت فلش</string>
    <string name="flash_send_explain">پیامک بصورت فلش ارسال میشود.</string>
    <string name="show_factor">نمایش فاکتور</string>
    <string name="show_factor_explain">فقط هزینه ی ارسال پیامک را نمایش دهد.</string>
    <string name="customers">مشتریان</string>
    <string name="customers_explain">هزینه پیامک از مشتریان ثبت شده در قسمت مشتریان کسر شود.</string>
    <string name="save">ذخیره</string>
    <string name="save_explain">به عنوان الگو ذخیره شود.</string>
    
    <string name="import_via_contacts">ورود از دفترچه تلفن</string>
    <string name="import_via_excel">ورود از اکسل</string>
    <string name="import_via_text_file">ورود از فایل متنی</string>

    <string name="warn_empty_sender">شماره ارسال کننده نمیتواند خالی باشد</string>
    <string name="warn_empty_receiver">دریافت کننده نمیتواند خالی باشد</string>
    <string name="warn_empty_message">متن پیام نمیتواند خالی باشد</string>

    <string name="success_sending_single_sms">ارسال پیامک تکی با موفقیت انجام شد</string>
    <string name="error_sending_single_sms">ارسال پیامک با شکست مواجه شد</string>
    
    <string name="error_contact_permission_denied">برای ورود از مخاطبین به دسترسی نیاز است</string>


    <!-- Phone Numbers Dialog -->
    <string name="add">افزودن</string>
    <string name="mobile_number">شماره موبایل</string>
    <string name="warn_empty_mobile">شماره موبایل خالی است</string>
    <string name="error_wrong_number_format">فرمت شماره موبایل غلط است</string>
    <string name="success_adding_number">شماره موبایل اضافه شد</string>

    <!-- Groups Dialog -->
    <string name="groups">گروه ها</string>
    <string name="group">گروه</string>
    <string name="warn_empty_group">نام گروه خالی است</string>
    <string name="warn_duplicate_group">نام گروه تکراری است</string>
    <string name="error_group_not_exist">این گروه وجود ندارد</string>
    <string name="success_adding_group">گروه با موفقیت اضافه شد</string>

    <!-- Send Group Message Fragment -->
    <string name="send_group_message">ارسال پیامک گروهی</string>
    <string name="add_all_groups">افزودن همه گروه ها</string>
    <string name="warn_receiver_groups_not_exits">هیچ گروهی برای دریافت کننده وجود نداره</string>
    <string name="success_adding_all_groups">همه گروه ها افزوده شدند</string>
    <string name="warn_no_group_exist">هیچ گروهی جهت افزودن وجود ندارد</string>

    <!-- Network Operations -->
    <string name="error_connecting_to_server">اتصال به سرور با خطا مواجه شد</string>
    <string name="error_server_no_response">عدم دریافت پاسخ از سرور</string>
    <string name="warn_connection_failed">لطفا اتصال اینترنت خود را بررسی کنید</string>


    <!-- Snackbar -->
    <string name="email_send_success">ایمیل با موفقیت ارسال شد</string>
    <string name="desc_success_snack">موفق</string>

    <string name="warn_no_file_selected">هیچ فایلی انتخاب نشد</string>
    <string name="success_importing_number">شماره ها با موفقیت وارد شدند</string>
    <string name="empty_numbers_list">شماره ای جهت وارد کردن وجود ندارد!</string>
    <string name="wrong_excel_format">فرمت فایل اکسل غلط است</string>


    <!-- Blacklist Send Bottom Sheet Dialog -->
    <string name="send_to_blacklist">ارسال به لیست سیاه</string>
    <string name="blacklist_send_explain">بیش از ۵۰ درصد مخاطبین کشوردر لیست سیاه قراردارند\nچنانچه تمایل دارید کلیه مخاطبان شما(به همراه شماره های لیست سیاه) این پیام را دریافت کنند دکمه آبی را کلیک نمایید.\nارسال به مخاطبین عادی شما طبق تعرفه شما خواهد بود\nبه ازای ارسال هرپیام به مخاطبین لیست سیاه ۲۵۰ تومان کسر خواهد شد\nبه دلیل بالا بودن شماره ها در لیست سیاه در صورت کسری شارژ پیام های شما ارسال نمیگردد بنابراین از بالابودن میزان موجودی خود آگاه باشید\nچنانچه متن ارسالی شما نیاز به دریافت داشت(مانند منشی پیامک ها)، حتما شماره ی دریافت کننده خود را در متن پیامک ارسال نمایید.\nباتشکر
    </string>
    <string name="send_to_blacklist_numbers">ارسال به شماره های بلک لیست</string>
    <string name="regular_send">ارسال بصورت عادی</string>

    <!-- Group Save Bottom Sheet Dialog -->
    <string name="save_to_phonebook">ثبت در دفترچه تلفن</string>
    <string name="add_to_group">افزودن به گروه</string>
    <string name="no_desire">تمایلی ندارم</string>
    <string name="refresh">بارگذاری مجدد</string>
    <string name="error_wrong_selected_group">گروه انتخابی غلط است</string>
    <string-array name="select_group">
        <item>انتخاب گروه مورد نظر</item>
    </string-array>
    <string name="success_adding_to_group">شماره ها با موفقیت به گروه اضافه شدند</string>
    <string name="error_adding_to_group">افزودن شماره ها به گروه با شکست مواجه شد</string>
    
    
    <!-- Contacts Bottom Sheet Dialog -->
    <string name="close">بستن</string>
    <string name="import_contacts">ورود مخاطبین</string>
    <string name="select_all">انتخاب همه</string>
    <string name="error_no_contacts_selected">هیچ مخاطبی انتخاب نشده است</string>

    <!-- Action Bar -->
    <string name="more">بیشتر</string>


    <!-- Biometric Auth -->
    <string name="user_authentication">احراز هویت کاربر</string>
    <string name="biometric_auth">برای ورود به برنامه حسگر اثر انگشت را لمس کنید</string>
    <string name="passcode_login">ورود به با کد ورود</string>

    <!-- Content Description -->
    <string name="forward">رو به جلو</string>
    <string name="go_back">برگشت به عقب</string>
    <string name="cont_desc_delete">حذف</string>


    <string name="price_dialog_default">پیامک فارسی %s ریال\n
    پیامکـ لاتین %s ریال\n
    پیامک فارسی به ایرانسل %s ریال\n
    پیامک لاتین به ایرانسل %s ریال</string>
    
    <string name="price_dialog_title">قیمت ارسال پیامک</string>
    <string name="price_dialog_subtitle">برای خطوط %s قیمت ارسال پیامک به شرح زیر میباشد:</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="array_send_message">
        <item>ارسال پیامک تکی</item>
        <item>ارسال پیامک گروهی</item>
        <item>ارسال پیامک نظیر به نظیر</item>
        <item>تنظیمات شخصی سازی</item>
        <item>ارسال پیامک داینامیک</item>
        <item>ارسال پیامک از اکسل</item>
        <item>ارسال بر اساس کد پستی</item>
        <item>ارسال به تفکیک جنسیت</item>
        <item>ارسال دانشجو</item>
        <item>ارسال به دفتر تلفن سایت</item>
    </string-array>

</resources>