<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:padding="@dimen/pad_bottom_sheet_dialog" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/send_blacklist_title_tv"
        android:text="@string/send_to_blacklist"
        android:textSize="@dimen/title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/blacklist_explain_layout"
        android:layout_marginTop="@dimen/mg_t_bottom_sheet_items"
        app:layout_constraintTop_toBottomOf="@id/send_blacklist_title_tv"
        app:layout_constraintBottom_toTopOf="@id/send_blacklist_btn" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/blacklist_send_explain"
            android:textSize="@dimen/ts_dialog_subtitle"
            android:textColor="@color/black_unimportant" />
    </androidx.core.widget.NestedScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/send_blacklist_btn"
        style="@style/normal_button"
        android:layout_marginTop="@dimen/mg_t_bottom_sheet_items"
        android:text="@string/send_to_blacklist_numbers"
        app:layout_constraintTop_toBottomOf="@id/blacklist_explain_layout" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/send_regular_btn"
        style="@style/outline_button"
        android:layout_marginTop="@dimen/mg_t_bottom_sheet_items"
        android:text="@string/regular_send"
        app:layout_constraintTop_toBottomOf="@id/send_blacklist_btn"


</androidx.constraintlayout.widget.ConstraintLayout>