<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:layout_marginStart="@dimen/login_start_end"
        android:layout_marginEnd="@dimen/login_start_end"
        android:paddingBottom="20dp"
        tools:context=".Fragment.Login.LoginFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/enter_app"
            android:text="@string/enter_app"
            android:textSize="@dimen/title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/login_top"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_layout"
            style="@style/login_field_layout"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/enter_app" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_field_icon"
                android:id="@+id/user_iv"
                android:src="@drawable/ic_user"
                android:contentDescription="@string/username"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_tv"
                android:text="@string/username"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/user_iv" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/user_et"
                style="@style/login_field_et"
                android:inputType="text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/user_iv"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pass_layout"
            style="@style/login_field_layout"
            app:layout_constraintTop_toBottomOf="@id/user_layout" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_field_icon"
                android:id="@+id/pass_iv"
                android:src="@drawable/ic_pass"
                android:contentDescription="@string/password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pass_tv"
                android:text="@string/password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/pass_iv" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/pass_et"
                style="@style/login_field_et"
                android:inputType="textPassword"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/pass_iv" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submit_bt"
            android:text="@string/submit"
            style="@style/normal_button"
            app:layout_constraintTop_toBottomOf="@id/pass_layout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup_tv"
            android:text="@string/signup_in_site"
            style="@style/login_options"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submit_bt"
            app:layout_constraintEnd_toStartOf="@id/receiver_divider" />

        <View
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:id="@+id/receiver_divider"
            android:background="@color/navy_blue"
            app:layout_constraintStart_toEndOf="@id/signup_tv"
            app:layout_constraintTop_toTopOf="@id/signup_tv"
            app:layout_constraintBottom_toBottomOf="@id/signup_tv"
            app:layout_constraintEnd_toStartOf="@id/forgot_pass_tv"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_pass_tv"
            android:text="@string/forgot_password"
            style="@style/login_options"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/receiver_divider"
            app:layout_constraintTop_toBottomOf="@id/submit_bt"
            app:layout_constraintEnd_toStartOf="@id/receiver_divider" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>