<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/phone_number_dialog"
    style="@style/dialog_layout" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_title_tv"
        android:text="@string/groups"
        style="@style/dialog_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/group_layout"
        style="@style/login_field_layout"
        app:layout_constraintTop_toBottomOf="@id/dialog_title_tv" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/login_field_icon"
            android:id="@+id/group_iv"
            android:src="@drawable/ic_groups"
            android:contentDescription="@string/group"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/group_tv"
            android:text="@string/group"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/group_iv" />

        <AutoCompleteTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/group_ctv"
            style="@style/login_field_et"
            android:inputType="text"
            android:imeOptions="actionDone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/group_iv"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_bt"
        android:text="@string/add"
        style="@style/login_button"
        app:layout_constraintTop_toBottomOf="@id/group_layout" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_dialog_scroll"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/add_bt"
        app:layout_constraintBottom_toBottomOf="parent" >
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/group_recycler"
            android:gravity="top"
            android:layout_marginTop="@dimen/mg_tb_dialog_items"
            android:layout_marginBottom="@dimen/mg_tb_dialog_items" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>