<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:id="@+id/contacts_toolbar"
                android:background="@color/navy_blue"
                app:contentInsetStart="0dp"
                app:layout_constraintTop_toTopOf="parent" >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/close_iv"
                        android:src="@drawable/ic_close"
                        android:contentDescription="@string/close"
                        android:paddingStart="@dimen/pad_se_action_bar"
                        android:paddingEnd="@dimen/pad_se_action_bar_icons"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/select_all_iv"
                        android:src="@drawable/ic_select_all"
                        android:contentDescription="@string/select_all"
                        android:paddingStart="@dimen/pad_se_action_bar_icons"
                        android:paddingEnd="@dimen/pad_se_action_bar"
                        app:layout_constraintEnd_toEndOf="parent "
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/import_contacts_tv"
                        android:text="@string/import_contacts"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/pad_se_action_bar_icons"
                        android:paddingEnd="@dimen/pad_se_action_bar_icons"
                        app:layout_constraintEnd_toStartOf="@id/select_all_iv"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/contacts_recycle"
                app:layout_constraintTop_toBottomOf="@id/contacts_toolbar"
                app:layout_constraintBottom_toBottomOf="parent" />
        </LinearLayout>
        <include
            layout="@layout/layout_progress_indicator" />

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>